# minimal-opengl-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
scripts/toolchains/: PrimaryToolChain.cmake
